# got-ya-id

./: .__env  .gitignore  .rustfmt.toml  .travis.yml  :  :w  Aptfile  Cargo.toml  Procfile  Procfile-cp  README.md  cargo-timing-20200417T074717Z.html  cargo-timing-20200417T075810Z.html  cargo-timing.html  diesel.toml  env_sample  gyid IDs  instructions.txt  o.py
src/: :  :w  lib.rs  main.rs  oauth2proc
src/apps/: api.rs  mod.rs
src/apps/auth/: :w  validate.rs
src/apps/core/: response.rs
src/apps/email/: models.rs  views.rs
src/apps/ids/: mod.rs  models.rs  utils.rs  validators.rs  views.rs
src/apps/institution/: models.rs  views.rs
src/apps/profiles/: mod.rs  models.rs  utils.rs  views.rs
src/apps/user/: mod.rs  models.rs  tests.rs  utils.rs  views.rs
src/config/: config.rs  configs.rs
src/core/: .core  derived.rs  mail.rs  mod.rs  py_interface.rs  response.rs  upload
src/diesel_cfg/: config.rs  schema.patch  schema.rs  schema.rs.orig  schema.rs.rej  up.sql
src/diesel_cfg/2020-05-13-155629_point_equality_operator-backup/: down.sql
src/diesel_cfg/migrations/00000000000000_diesel_initial_setup/: up.sql
src/diesel_cfg/migrations/2019-09-30-171149_create_user/: down.sql  up.sql
src/diesel_cfg/migrations/2019-10-01-141251_create_user/: up.sql
src/diesel_cfg/migrations/2019-10-11-174402_profiles/: down.sql  up.sql
src/diesel_cfg/migrations/2019-10-12-144035_create_profiles/: up.sql
src/diesel_cfg/migrations/2019-10-24-201109_user_avatars/: down.sql  up.sql
src/diesel_cfg/migrations/2020-04-16-134023_add_social_id_column/: down.sql  up.sql
src/diesel_cfg/migrations/2020-04-17-085637_unique_social_id/: down.sql  up.sql
src/diesel_cfg/migrations/2020-04-17-090330_social_verified/: down.sql  up.sql
src/diesel_cfg/migrations/2020-04-17-095721_third_p_users/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-02-065832_user_access_level/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-02-073040_ids_table/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-05-194038_refresh_tokens_table/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-08-164456_idt_about/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-11-134342_idt_owner_col/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-12-121405_manage_updated_at/: up.sql
src/diesel_cfg/migrations/2020-05-12-130849_create_claimable_query/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-13-155629_point_equality_operator/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-13-182129_unique_user_id_on_claim/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-19-143707_matches_table/: down.sql  up.sql
src/diesel_cfg/migrations/2020-05-26-141110_email_table/: down.sql  up.sql
src/diesel_cfg/migrations/2020-11-28-095127_alter_IDTs_location_point/: down.sql  up.sql
src/diesel_cfg/migrations/2021-10-10-154132_IDT_add_REG_NO_field/: down.sql  up.sql
src/errors/: error.rs
src/similarity/: cosine.rs  levenshtein.rs  mod.rs
src/templates/: base.html  claim_notification.html  email_activation.html  email_verification.html  expired_pass_reset_link.html  macros.html  password_reset.html  password_reset_form.html  styles.css
(+10 files in other folders)
