[package]
name = "got-ya-id"
version = "0.1.0"
authors = ["mugoh <mugoh.ks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
listenfd = "0.3"
serde = "1.0.101"
validator = "0.9.0"
validator_derive = "0.9.0"
serde_derive = "1.0.101"
serde_json = "1.0.40"
lazy_static = "1.4.0"
regex = "1"
log = "0.4.0"
env_logger = "0.6.2"
futures = "0.1"
jsonwebtoken = "6"
envy = "0.4"
tera = "0.7"
url = "1.2"
lettre = "0.9"
lettre_email = "0.9"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.14.1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"]  }
bcrypt = "0.1"
actix-multipart = "0.1.4"
pyo3 = "0.9.2" 
base64 = "0.11.0"
oauth2 = "2.0"

[dev-dependencies]
actix-http-test = "0.2.5"
