[package]
name = "got-ya-id"
version = "0.2.0"
authors = ["mugoh <mugoh.ks@gmail.com>"]
edition = "2018"
description = "A Got-ya-Id pack"
license = "BSD-Protection"
repository = "https://github.com/mugoh/got-ya-id"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
# opt-level = 3 
# incremental = true


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
actix-web = { version = "2", features = ["openssl"] }
actix-cors = "0.2.0"
actix-rt = "1"
actix-web-httpauth = "0.4.1"
actix-multipart = "0.2"
futures = "0.3.8"
listenfd = "0.3"
serde = "1.0.101"
validator = "0.9.0"
validator_derive = "0.9.0"
serde_derive = "1.0.101"
serde_json = "1.0.40"
lazy_static = "1.4.0"
regex = "1.3.7"
log = "0.4"
env_logger = "0.6.2"
jsonwebtoken = "8"
envy = "0.4"
tera = "1.0"
url = "1.2"
lettre = "0.9"
lettre_email = "0.9"
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
diesel_cli = "1.4.1"
dotenv = "0.14.1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"]  }
bcrypt = "0.1"
pyo3 = "0.16" 
base64 = "0.11.0"
oauth2 = "2.0"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1.18", features = ["full"] }
diesel_geometry = "1.4.0"
counter="0.4.3"

[dev-dependencies]
